--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,21 @@
+
+/wp-admin/
+/wp-includes/
+/index.php
+/license.txt
+/readme.html
+/wp-config.php
+
+
 *.log
-*.cache
-*.tmp
-.DS_Store
-node_modules/
-vendor/
-.idea/
-.vscode/
+*.sql
+*.sqlite
+/wp-content/cache/
+/wp-content/uploads/
+
+
+.htaccess
+*.bak
+*.swp
+.env
+
